--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Gemini API Key
 # Get your API key from https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
+
+GEMINI_MODEL=gemini-2.5-flash
