--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - pandas=2.3.3
   - protobuf
   - flask=3.1.2
-  - gunicorn=23.0.0
+  #- gunicorn=23.0.0
   - python-dotenv=1.2.1
   - pyarrow
   - numpy=2.3.3
