--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -19,7 +19,7 @@ RUN conda install -y -c conda-forge -c defaults \
     scipy=1.16.2 \
     pip && \
     pip install openai==2.9.0 google-generativeai==0.8.5 chromadb==1.3.5 sentence-transformers==5.1.2 \
-    torch==2.9.1 stable-baselines3==2.8.0a2 torchvision==0.24.1 transformers==4.57.3 ucimlrepo==0.0.7 && \
+    torch==2.9.1 stable-baselines3==2.8.0a2 torchvision==0.24.1 transformers==4.57.3 && \
     conda clean -afy
 
 COPY . .
